--- a/ContosoUniversity/appsettings.json
+++ b/ContosoUniversity/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ContosoUniversity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqliteConnection": "Data Source=ContosoUniversity.db"
+  }
 }
